# OpenGL

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CmakeLists.txt  Makefile  README.md  _Makefile.txt  cmake_install.cmake  create_scene.cpp  file.txt  gmon.out  project_code_report.txt  script.cpp  script.py  script.sh  windows_run.bat
Data/: NBody-report.docx  intro.docx  net-report.docx  report.docx
Data/report/: nbody-4287.txt  ratio.py  speedup.py
assets/dir/Wilson/: Wilson.xml
assets/img/: gun.psd  Без имени-2.psd
assets/model/2b/: texture.txt
assets/model/female/: female.glb  texture.txt
assets/model/shaders/: model_fs.glsl  model_vs.glsl
assets/txt/: tree.txt
docs/: report.docx  shader.txt
include/: ObjectTransform.hpp  camera.hpp  circle.hpp  cube_bone.hpp  glfw.hpp  lib.hpp  math_3d.hpp  pipeline.hpp  render.hpp  scene.hpp  sphere.hpp  sprite.hpp
include/binary-tree/: binary_tree.hpp  list.h
include/cubemap/: cubemap.hpp
include/data/: big_array.hpp  bit_array.hpp  bit_big_array.hpp
include/dynamic_compiler/: dynamic_compiler.hpp
include/entities/: actor.hpp  animation.hpp  character.hpp  component.hpp  entities.hpp  owner.hpp  pawn.hpp  player.hpp
include/entities/components/: _motion.hpp  animation.hpp  animationInfo.hpp  bone.hpp  component.hpp  components.hpp  model.hpp  motion.hpp  overallAnimation.hpp  skelet.hpp  transition.hpp
include/game/: bulletManager.hpp  gameManager.hpp  gameTime.hpp
include/lib-project/: lib.hpp  math_3d.hpp  try.hpp
include/loader/: loader.hpp
include/managers/: bullet_manager.hpp  gameManager.hpp  global_state.hpp  render_manager.hpp  time_manager.hpp  window_manager.hpp
include/math/: Matrix4f.hpp  Vector3.hpp
include/mesh/: Untitled-1.cpp  custom_mesh.hpp  mesh.hpp  physics_shape.hpp  primitive_mesh.hpp  shape.hpp
include/object/: circle.hpp  cube.hpp  cube_bone.hpp  cube_simple.hpp  cube_wire.hpp  line.hpp  objectTransform.hpp  renderableObject.hpp  scene.hpp  sphere.hpp  sphere_wire.hpp  sprite.hpp
include/object/component/: #pragma once.cpp  ComponentTransform.cpp  component.hpp  component_dual_quat.hpp  component_physics.hpp  component_transform.hpp
include/object/geometry/: base.hpp  geometry.hpp  mesh.hpp  primitive.hpp  skeletal_mesh.hpp
include/object/material/: material.hpp  shader.hpp  texture.hpp
include/object/primitive/: sphere.hpp  sprite.hpp
include/object/shader/: shader.hpp
include/object/skybox/: cubemap.hpp  skybox.hpp
include/object/terrain/: terrain.hpp
include/object/transform/: collider_transform.hpp  (+5 more)
include/render/: camera.hpp  distance.hpp  glfw.hpp  pipeline.hpp  render.hpp
include/server/: clien.hpp  player.hpp  server.hpp
include/threads/: thread_pool.hpp  threads.hpp
report/: NBody-report.docx  data.txt  lat.txt  nbody-5065.txt
shaders/: base_fs.glsl  bone_fs.glsl  circle_fs.glsl  cube_fs.glsl  cube_vs .glsl  cube_vs.glsl  dual_quat_vs.glsl  instance_vs.glsl  mesh_vs.glsl  my_symbol_fs.glsl  pers_proj_vs.glsl  point_fs.glsl  point_vs.glsl  skeletal_mesh_vs.glsl  sphere_fs.glsl  sphere_vs.glsl  sprite_bone_fs.glsl  sprite_fs.glsl  sprite_repeat_vs.glsl  sprite_vs.glsl  white_fs.glsl  wire_fs.glsl
shaders/model/: model_fs.glsl  model_vs.glsl
shaders/skybox/: skybox_fs.glsl  skybox_vs.glsl
src/: CMakeLists.txt  Makefile  cmake_install.cmake
src/OpenGL/: ObjectTransform.hpp  camera.hpp  cluster.cpp  cluster.hpp  distance.cpp  distance.hpp  lib.hpp  main.cpp  math_3d.cpp  math_3d.h  n_body.cpp  n_body.hpp  opengl.cpp  opengl.hpp  pipeline.cpp  pipeline.hpp  shaders.cpp  shaders.hpp
src/cubemap/: cubemap.cpp
src/data/: CMakeLists.txt  big_array.cpp  bit_array.cpp  bit_big_array.cpp
src/dynamic_compiler/: CMakeLists.txt  dynamic_compiler.cpp
src/entities/: CMakeLists.txt  Wilson.cpp  actor.cpp  character.cpp  component.cpp  owner.cpp  pawn.cpp  player.cpp  sprite.cpp
src/game/: CMakeLists.txt  bulletManager.cpp  gameManager.cpp
src/glfw/: CMakeLists.txt  Makefile  cmake_install.cmake  distance.cpp  glfw.cpp  pipeline.cpp  render.cpp
src/instances/: CMakeLists.txt
src/loader/: CMakeLists.txt  loader.cpp
src/main/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
src/managers/: CMakeLists.txt  bullet_manager.cpp  global_state.cpp  render_manager.cpp  time_manager.cpp  window_manager.cpp
src/math/: CMakeLists.txt  Makefile  cmake_install.cmake  math_3d.cpp
src/mesh/: CMakeLists.txt  custom_mesh.cpp  glUseProgram(program_id);.cpp  mesh.cpp  physics_shape.cpp  primitive_mesh.cpp  shape.cpp
src/object/: CMakeLists.txt  cube.cpp  cube_wire.cpp  line.cpp  objectTransform.cpp  sprite.cpp
src/object/component/: CMakeLists.txt  component.cpp  componentTransform.cpp  component_dual_quat.cpp  component_physics.cpp
src/object/component/template/: CMakeLists.txt  camera.cpp  component_physics.cpp  mesh.cpp  shape.cpp  skeletal_mesh.cpp
src/object/component/template_dual_quat/: CMakeLists.txt  shape.cpp
src/object/geometry/: CMakeLists.txt  mesh.cpp  primitive.cpp  skeletal_mesh.cpp
src/object/geometry/animation/: CMakeLists.txt  animator.cpp  skeletal_animation.cpp
src/object/geometry/primitive/: cube.cpp  sprite.cpp
src/object/material/: CMakeLists.txt  material.cpp  shader.cpp  texture.cpp
src/object/mesh/: CMakeLists.txt  mesh.cpp
src/object/primitive/: CMakeLists.txt  cube.cpp  sprite.cpp
src/object/shader/: CMakeLists.txt  shader.cpp
src/object/skybox/: CMakeLists.txt  skybox.cpp
src/object/terrain/: CMakeLists.txt
src/object/transform/: CMakeLists.txt  collider_transform.cpp  rigid_transform.cpp  transform.cpp  transform_dual_quat.cpp
src/objects/: CMakeLists.txt  Makefile  ObjectTransform.cpp  circle.cpp  cmake_install.cmake  cube.cpp  cube_bone.cpp  cube_simple.cpp  cube_wire.cpp  line.cpp  objectTransform.cpp  sphere.cpp  sprite.cpp
src/render/: CMakeLists.txt  free_type.cpp  glfw.cpp  pipeline.cpp  render.cpp  stb_image_impl.cpp
src/scenes/: CMakeLists.txt
src/server/: CMakeLists.txt  server.cpp
src/threads/: CMakeLists.txt  thread_pool.cpp  threads.cpp
(+119 files in other folders)
